--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <link rel="stylesheet" href="./header.css">
     <link rel="stylesheet" href="./footer.css">
     <link rel="stylesheet" href="./card.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./inputarea.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
 
 
